--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
                 </configuration>
             </plugin>
         </plugins>
-		  <pluginManagement>
+	</pluginManagement>
     </build>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
